# playground-policyflow

./: .env.example  CLAUDE.md  README.md  pyproject.toml  workflow.yaml
docs/: NODES.md  README.md  USERGUIDE.md  architecture.md  cli-cheatsheet.md  concepts.md  source-guide.md
experiments/: keyword_scorer_example.py
plans/: ADDITIONAL_NODES.md  ARIZE_PHOENIX.md  BENCHMARK_REVIEW.md  BENCHMARK_SYSTEM.md  DYNAMIC_PARSER.md  FIX_INFINITE_LOOP.md  MULTI_LEVEL_MODEL_CONFIG.md  NODE_DEFINED_MODELS.md  PLAN.md  TWO_STEP_PARSER.md
src/policy_evaluator/templates/: workflow_from_normalized.j2
src/policyflow/: __init__.py  clause_mapping.py  cli.py  config.py  llm.py  models.py  numbering.py  parser.py  workflow.py  workflow_builder.py
src/policyflow/benchmark/: __init__.py  analyzer.py  applier.py  cli.py  comparator.py  generator.py  hypothesis.py  loader.py  metrics.py  models.py  optimizer.py  protocols.py  runner.py  tracker.py
src/policyflow/nodes/: __init__.py  aggregate.py  (+14 more)
tests/: conftest.py  test_aggregate.py  test_classifier.py  test_confidence_gate.py  test_config.py  test_criterion.py  test_data_extractor.py  test_keyword_scorer.py  test_length_gate.py  test_llm_node.py  test_pattern_match.py  test_sampler.py  test_sentiment.py  test_subcriterion.py  test_transform.py  test_workflow_builder.py
tests/benchmark/: test_analyzer.py  test_applier.py  test_cli.py  test_comparator.py  test_generator.py  test_hypothesis.py  test_integration.py  test_loader.py  test_metrics.py  test_models.py  test_optimizer.py  test_protocols.py  test_runner.py  test_tracker.py
(+10 files in other folders)
